# next-silicon-maths

./: CMakeLists.txt  Install.MD  Readme.MD  build.sh  cheb_poly_deg_11_inc_pi_001.txt  out.txt  requirements.txt  tay_opt_deg_11_inc_pi_001.txt
.github/workflows/: build.yml
code/: main.cpp
code/header/: fp32_custom_sine.h  math_custom_fun.h
code/src/: fp32_custom_sine.c  math_custom_fun.cpp
plots/accuracy/: inc_abs_pi_001.eps  inc_rel_pi_001.eps
results/accuracy/: CHEB_POLY_11four_pi_num_inc.txt  CHEB_POLY_11large_num_inc.txt  CHEB_POLY_11pi_inc.txt  CHEB_POLY_11two_pi_num_inc.txt  CHEB_POLY_11zero_zero_zero_one_num_inc.txt  CHEB_POLY_15four_pi_num_inc.txt  CHEB_POLY_15large_num_inc.txt  CHEB_POLY_15pi_inc.txt  CHEB_POLY_15two_pi_num_inc.txt  CHEB_POLY_15zero_zero_zero_one_num_inc.txt  CHEB_POLY_19four_pi_num_inc.txt  CHEB_POLY_19large_num_inc.txt  CHEB_POLY_19pi_inc.txt  CHEB_POLY_19two_pi_num_inc.txt  CHEB_POLY_19zero_zero_zero_one_num_inc.txt  CHEB_POLY_23four_pi_num_inc.txt  CHEB_POLY_23large_num_inc.txt  CHEB_POLY_23pi_inc.txt  CHEB_POLY_23two_pi_num_inc.txt  CHEB_POLY_23zero_zero_zero_one_num_inc.txt  CHEB_POLY_7four_pi_num_inc.txt  CHEB_POLY_7large_num_inc.txt  CHEB_POLY_7pi_inc.txt  CHEB_POLY_7two_pi_num_inc.txt  CHEB_POLY_7zero_zero_zero_one_num_inc.txt  TAYLOR_CPP_OPTIMIZED_11four_pi_num_inc.txt  TAYLOR_CPP_OPTIMIZED_11large_num_inc.txt  TAYLOR_CPP_OPTIMIZED_11pi_inc.txt  TAYLOR_CPP_OPTIMIZED_11two_pi_num_inc.txt  TAYLOR_CPP_OPTIMIZED_15four_pi_num_inc.txt  TAYLOR_CPP_OPTIMIZED_15large_num_inc.txt  TAYLOR_CPP_OPTIMIZED_15pi_inc.txt  TAYLOR_CPP_OPTIMIZED_15two_pi_num_inc.txt  TAYLOR_CPP_OPTIMIZED_19four_pi_num_inc.txt  TAYLOR_CPP_OPTIMIZED_19pi_inc.txt  TAYLOR_CPP_OPTIMIZED_19two_pi_num_inc.txt  TAYLOR_CPP_OPTIMIZED_23four_pi_num_inc.txt  TAYLOR_CPP_OPTIMIZED_23large_num_inc.txt  TAYLOR_CPP_OPTIMIZED_23pi_inc.txt  TAYLOR_CPP_OPTIMIZED_23two_pi_num_inc.txt  (+17 more)
results/performance/: CHEB_POLY_11four_pi_num_inc.txt  CHEB_POLY_11large_num_inc.txt  CHEB_POLY_11pi_inc.txt  CHEB_POLY_11two_pi_num_inc.txt  CHEB_POLY_11zero_zero_zero_one_num_inc.txt  CHEB_POLY_15four_pi_num_inc.txt  CHEB_POLY_15large_num_inc.txt  CHEB_POLY_15pi_inc.txt  CHEB_POLY_15two_pi_num_inc.txt  CHEB_POLY_15zero_zero_zero_one_num_inc.txt  CHEB_POLY_7four_pi_num_inc.txt  CHEB_POLY_7large_num_inc.txt  CHEB_POLY_7pi_inc.txt  CHEB_POLY_7two_pi_num_inc.txt  CHEB_POLY_7zero_zero_zero_one_num_inc.txt  TAYLOR_CPP_OPTIMIZED_11four_pi_num_inc.txt  TAYLOR_CPP_OPTIMIZED_11large_num_inc.txt  TAYLOR_CPP_OPTIMIZED_11pi_inc.txt  TAYLOR_CPP_OPTIMIZED_11two_pi_num_inc.txt  TAYLOR_CPP_OPTIMIZED_11zero_zero_zero_one_num_inc.txt  TAYLOR_CPP_OPTIMIZED_15four_pi_num_inc.txt  TAYLOR_CPP_OPTIMIZED_15large_num_inc.txt  TAYLOR_CPP_OPTIMIZED_15pi_inc.txt  TAYLOR_CPP_OPTIMIZED_15two_pi_num_inc.txt  TAYLOR_CPP_OPTIMIZED_15zero_zero_zero_one_num_inc.txt  TAYLOR_CPP_OPTIMIZED_7four_pi_num_inc.txt  TAYLOR_CPP_OPTIMIZED_7large_num_inc.txt  TAYLOR_CPP_OPTIMIZED_7pi_inc.txt  TAYLOR_CPP_OPTIMIZED_7two_pi_num_inc.txt  TAYLOR_CPP_OPTIMIZED_7zero_zero_zero_one_num_inc.txt  TAYLOR_C_ORIGINAL_11four_pi_num_inc.txt  TAYLOR_C_ORIGINAL_11large_num_inc.txt  TAYLOR_C_ORIGINAL_11pi_inc.txt  TAYLOR_C_ORIGINAL_11two_pi_num_inc.txt  TAYLOR_C_ORIGINAL_11zero_zero_zero_one_num_inc.txt  TAYLOR_C_ORIGINAL_15four_pi_num_inc.txt  TAYLOR_C_ORIGINAL_15large_num_inc.txt  TAYLOR_C_ORIGINAL_15pi_inc.txt  TAYLOR_C_ORIGINAL_15two_pi_num_inc.txt  TAYLOR_C_ORIGINAL_15zero_zero_zero_one_num_inc.txt  (+5 more)
scripts/: extract_accuracy.py  extract_accuracy_four_pi.py  extract_accuracy_two_pi.py  extract_accuracy_zero_zero_zero.py  extract_performance.py
src/: fp32_custom_sine.c
test/: main_fuzzy.cpp
test/fuzzy/: main_fuzzy.cpp
test/fuzzy/afl/: CMakeLists.txt  main_afl.cpp
test/fuzzy/lib_fuzz/: main_fuzzy.cpp  main_fuzzy_1.cpp  main_fuzzy_2.cpp  main_fuzzy_3.cpp  main_fuzzy_4.cpp  main_fuzzy_5.cpp  main_fuzzy_6.cpp  main_fuzzy_7.cpp
test/src/: tests.cpp
test/unit/src/: tests.cpp
